Fix scrollbar toggle on lightbox transition

--- a/source/_assets/sass/_lightbox.scss
+++ b/source/_assets/sass/_lightbox.scss
@@ -1,3 +1,21 @@
+// Lightbox needs a scrollbar for cases where the description is too long,
+//   but we don't want a double-scroll bar w/ html/body
+// Typically we'd disable body overflow-y on Lightbox.open(),
+//   but if we want the lightbox to transition,
+//   that'd cause the body to "jump" as its scroll is toggled.
+// So instead, we are abusing the fact that fixed elements
+//   should ignore underlying scrollbars.
+
+html, body {
+	overflow-y: hidden;
+	height: 100%;
+}
+
+#not-a-lightbox {
+	overflow-y: scroll;
+	height: 100%;
+}
+
 #lightbox {
 
 	position: fixed;
@@ -14,14 +32,14 @@
 	overflow-y: scroll;
 
 	// main.js will show the lightbox
-	visibility: hidden;
+	pointer-events: none;
 	opacity: 0;
 
 	transition: opacity 0.5s ease-in;
 
 	// Toggle when the lightbox is opened
 	&.opened {
-		visibility: visible;
+		pointer-events: auto;
 		opacity: 1;
 
 		display: flex;
